# raytracer

./: .gitignore  CMakeLists.txt  README.md
docs/: docs.html
src/: camera.h  common.h  general.h  hittable.h  main.cpp  sphere.h
src/materials/: dielectric.h  lambertian.h  material.h  metal.h
src/objects/: cone.h  cube.h  cylinder.h  hittable.h  plane.h  sphere.h  triangle.h
src/utils/: color.h  common.h  interval.h  vec3.h
src/world/: camera.h  hittable_list.h  ray.h
